# pubmed-paper-fetcher

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml  run_web_server.py  setup.sh
pubmed_paper_fetcher/: __init__.py  cli.py  exporter.py  fetcher.py  models.py  utils.py  web_app.py
pubmed_paper_fetcher/static/css/: style.css
pubmed_paper_fetcher/static/js/: app.js
pubmed_paper_fetcher/templates/: index.html
tests/: __init__.py  test_models.py  test_utils.py
