[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "A Python program to fetch research papers from PubMed with pharmaceutical/biotech company affiliations"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "typing-extensions (>=4.14.1,<5.0.0)"
]

[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "A Python program to fetch research papers from PubMed with pharmaceutical/biotech company affiliations"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pubmed_paper_fetcher"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.4"
pandas = "^2.3.1"
click = "^8.2.1"
python-dateutil = "^2.9.0.post0"
typing-extensions = "^4.14.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
mypy = "^1.17.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
